Implemented auto-completion feature and a bunch of shortcuts.